<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="onboarding_sheet_cancel">취소</string>
</resources>
